// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DappPage render should render error 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input-stub value="" classname="dapp-form-input" name="url" data-vv-name="url" placeholder="Enter dapp url..." data-vv-as="Dapp url" data-test="dapp-url-input" aria-required="true" aria-invalid="true">
                    <div class="control">
                        <button disabled="disabled" data-test="dapp-open-button" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input-stub>
            </div>
            <!---->
            <p class="dapp-error help is-danger">
                Page is not loaded. Try load other page or reload current.
            </p>
        </div>
    </div>
    <!---->
</div>
`;

exports[`DappPage render should render iframe if it loading but it must be hidden 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input-stub value="" classname="dapp-form-input" name="url" data-vv-name="url" placeholder="Enter dapp url..." data-vv-as="Dapp url" data-test="dapp-url-input" aria-required="true" aria-invalid="true" disabled="true">
                    <div class="control">
                        <button disabled="disabled" data-test="dapp-open-button" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input-stub>
            </div>
            <iframe src="https://wildproxy-dev.endpass.com/" class="dapp-frame" style="display: none;"></iframe>
            <!---->
        </div>
    </div>
    <!---->
</div>
`;

exports[`DappPage render should render iframe it loaded 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input-stub value="" classname="dapp-form-input" name="url" data-vv-name="url" placeholder="Enter dapp url..." data-vv-as="Dapp url" data-test="dapp-url-input" aria-required="true" aria-invalid="true">
                    <div class="control">
                        <button disabled="disabled" data-test="dapp-open-button" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input-stub>
            </div>
            <iframe src="https://wildproxy-dev.endpass.com/" class="dapp-frame"></iframe>
            <!---->
        </div>
    </div>
    <!---->
</div>
`;

exports[`DappPage render should render password modal if currentRequest exists 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input-stub value="" classname="dapp-form-input" name="url" data-vv-name="url" placeholder="Enter dapp url..." data-vv-as="Dapp url" data-test="dapp-url-input" aria-required="true" aria-invalid="false">
                    <div class="control">
                        <button disabled="disabled" data-test="dapp-open-button" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input-stub>
            </div>
            <!---->
            <!---->
        </div>
    </div>
    <password-modal-stub title="Opened dapp requests your password">
        <!---->
    </password-modal-stub>
</div>
`;

exports[`DappPage render should render password modal with table if currentRequest is transaction 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input-stub value="" classname="dapp-form-input" name="url" data-vv-name="url" placeholder="Enter dapp url..." data-vv-as="Dapp url" data-test="dapp-url-input" aria-required="true" aria-invalid="false">
                    <div class="control">
                        <button disabled="disabled" data-test="dapp-open-button" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input-stub>
            </div>
            <!---->
            <!---->
        </div>
    </div>
    <password-modal-stub title="Opened dapp requests your password">
        <transaction-table-stub transaction="[object Object]" currency="[object Object]"></transaction-table-stub>
    </password-modal-stub>
</div>
`;

exports[`DappPage render should render without iframe, modals and errors by default 1`] = `
<div class="section">
    <div class="container">
        <div class="card app-card">
            <div class="card-header dapp-form">
                <v-input-stub value="" classname="dapp-form-input" name="url" data-vv-name="url" placeholder="Enter dapp url..." data-vv-as="Dapp url" data-test="dapp-url-input" aria-required="true" aria-invalid="true">
                    <div class="control">
                        <button disabled="disabled" data-test="dapp-open-button" class="button is-primary">
                            Open
                        </button>
                    </div>
                </v-input-stub>
            </div>
            <!---->
            <!---->
        </div>
    </div>
    <!---->
</div>
`;
